# packages/buntok-test/public/docs/swagger.json
@@ -196,6 +196,26 @@
           }
         }
       }
+    },
+    "/tests/hello/{name}": {
+      "get": {
+        "parameters": [
+          {
+            "schema": {
+              "type": "string",
+              "minLength": 3
+            },
+            "required": true,
+            "name": "name",
+            "in": "path"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
     }
   }
 }
